# gcatcirc

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: code.rust.wrapper.R  codes.R  data.R  extendr-wrappers.R  r_name.R  zzz.R
data/: all_c3_codes.rda
example/: Tutorial.Rmd  demo.R
man/: all_ambiguous_sequences.Rd  all_c3_codes.Rd  c3_code.Rd  c3_codes.Rd  c3_equiv_class.Rd  c3_equivmatrix.Rd  c3_in_class.Rd  circular_shift.Rd  dot-onLoad.Rd  get_component_of_representing_graph.Rd  get_cyclic_paths.Rd  get_exact_k_circular.Rd  get_k_graph_circular.Rd  get_longest_paths.Rd  get_representing_component_obj.Rd  get_representing_graph.Rd  get_representing_graph_obj.Rd  is_code.Rd  is_code_circular.Rd  is_code_cn_circular.Rd  is_code_comma_free.Rd  is_code_strong_comma_free.Rd  plot_component_of_representing_graph.Rd  plot_representing_graph.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: graph.rs  lib.rs  lib_utils.rs  main.rs
src/rust_gcatcirc_lib/: Cargo.toml  sgc_latex.tex
src/rust_gcatcirc_lib/src/: lib.rs
src/rust_gcatcirc_lib/src/code/: code_tests.rs  mod.rs
src/rust_gcatcirc_lib/src/graph_circ/: elements.rs  mod.rs
src/rust_gcatcirc_lib/src/graph_code/: mod.rs
src/rust_gcatcirc_lib/tests/: lib_tests.rs
tests/testthat/: testcodes.R
