[package]
name = "gcatcirc" # like in R package name
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['staticlib']

[dependencies]
extendr-api = '0.2'
rust_gcatcirc_lib = { git = "https://github.com/informatik-mannheim/rust_gcatcirc_lib.git" }

